--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,3 +154,9 @@ main {
 .detailHeader {
   text-decoration: underline;
 }
+
+#lottie-container{
+  border: solid 1px red;
+  width: 300px;
+  height: 300px;
+}
