--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -64,9 +64,9 @@ body {
     rgba(12, 38, 89, 1) 10%,
     rgba(28, 44, 140, 1) 50%
   );
+  background-repeat: no-repeat;
   font-family: "Roboto", sans-serif;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
 }
 
 header {
@@ -95,7 +95,7 @@ button:hover {
   transform: scale(1.1);
 }
 button:active {
-  transform: scale(1.3);
+  transform: scale(1.3)
 }
 
 #detailInfo:nth-child(1) {
@@ -115,29 +115,31 @@ main {
   justify-content: center;
   align-items: center;
   margin-top: 40px;
-  border: 1px solid;
-  border-radius: 10px;
+
   min-width: 20%;
-  width: 50%;
+ 
   margin: auto;
 }
 #grid {
-  display: none;
-  width: 20%;
-  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  left: 4%;
+  width: 30%;
   min-width: 200px;
   position: relative;
   bottom: 30px;
+  
 }
 
 #mainInfo {
   display: flex;
-  justify-content: center;
-  align-content: center;
-  margin: 40px;
-  position: relative;
-  right: 30px;
+  margin: 5% 0 10% 0 ;
+  height: 30px;
+ 
+ 
+ 
 }
+
 
 #grid div {
   display: grid;
@@ -151,20 +153,18 @@ main {
   text-decoration: none;
 }
 
-/* ------ nur zur ersten besseren Sichtbarkeit */
-.detailHeader {
-  text-decoration: underline;
+#box {
+  height: 40%;
+  width: 30%;
+  position: relative;
+  
 }
 
 #lottie-container {
-  border: solid 1px red;
-  width: 300px;
-  height: 300px;
-}
+  transform: scale(0.2) translate(-120%, -100%);
+  position: relative;
+ 
 
-/* ------ Google Maps container */
-
-#map {
-  height: 20vh;
-  width: 20%;
+ 
+ 
 }
