--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -161,10 +161,17 @@ main {
 }
 
 #lottie-container {
-  transform: scale(0.2) translate(-230%, -100%);
+  transform: scale(0.2) translate(-80%, -100%);
   position: relative;
  
 
  
  
 }
+
+#frog-container {
+  position: absolute;
+  left: 86%;
+  top: -7%;
+}
+
